Fix alignment

--- a/css/pages/_research.scss
+++ b/css/pages/_research.scss
@@ -117,7 +117,6 @@ section.research-team {
   .team {
     display: flex;
     justify-content: left;
-    align-items: center;
     flex-wrap: wrap;
     .team-thumbnail {
       text-align: center;
